create action reducer for watchlist --> implement add remove in movieList

--- a/src/components/movieList.module.css
+++ b/src/components/movieList.module.css
@@ -1,13 +1,25 @@
 .btn {
   border: none;
   outline: none;
-  background: #494949;
+  background: lightgreen;
   padding: 5px 10px;
   color: #fff;
   border-radius: 5px;
   font-weight: bold;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+}
+
+.btn-disabled {
+  border: none;
+  outline: none;
+  background: lightcoral;
+  padding: 5px 10px;
+  color: #fff;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .card-wrapper {
