--- a/src/components/css/navbar.module.css
+++ b/src/components/css/navbar.module.css
@@ -2,6 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 95vw;
+  position: fixed;
+  background: whitesmoke;
+  top: 0;
+  padding: 15px 0;
+  z-index: 9999;
 }
 
 .navlink {
